; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/gdi/gdi32/wine/mfdrv/extr_dc.c_MFDRV_SetBkColor.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/gdi/gdi32/wine/mfdrv/extr_dc.c_MFDRV_SetBkColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@META_SETBKCOLOR = common dso_local global i32 0, align 4
@CLR_INVALID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MFDRV_SetBkColor(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @META_SETBKCOLOR, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @HIWORD(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @LOWORD(i32 %9)
  %11 = call i64 @MFDRV_MetaParam2(i32 %5, i32 %6, i32 %8, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  br label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @CLR_INVALID, align 4
  br label %17

17:                                               ; preds = %15, %13
  %18 = phi i32 [ %14, %13 ], [ %16, %15 ]
  ret i32 %18
}

declare dso_local i64 @MFDRV_MetaParam2(i32, i32, i32, i32) #1

declare dso_local i32 @HIWORD(i32) #1

declare dso_local i32 @LOWORD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
